# rockpaperscissors

./: README.md  ai-statistics.py  ai_random.py  main.py  pyproject.toml
Dokumentaatio/: Kayttoohje.md  Määrittelydokumentti.md  Testausraportti.md  Toteutusdokumentti.md
Dokumentaatio/Viikkoraportit/: Viikko1.md  Viikko2.md  Viikko3.md  Viikko4.md  Viikko5.md  Viikko6.md  Viikkoraportti 1.md
src/: ai_markov.py  ai_multi.py  ai_random.py  main.py
src/tests/: test_ai_markov.py  test_ai_multi.py  test_ai_random.py  test_main.py  test_score_logic.py
