[tool.poetry]
name = "rockpaperscissors"
version = "0.1.0"
description = "Rock-Paper-Scissors game with Markov-based MultiAI"
authors = ["b1rdyn"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
matplotlib = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-cov = "^7.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
